# SubFix

./: CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  settings.json
app/: subtitle_app_gui.py
app/processors/: timing_editor.py  translator.py
exampleFiles/: test.srt
output/: test_processed.srt
subfix/: __main__.py
subfix/gui/: __init__.py  alt_layout.py  events.py  layout.py  state.py
subfix/processors/: sdh_cleaner.py  spellchecker.py
